fix: resume h3 spacing when no image

--- a/src/scss/_print.scss
+++ b/src/scss/_print.scss
@@ -18,7 +18,7 @@
 	}
 
 	.intro {
-		padding-bottom: .5rem;
+		padding-bottom: 1rem;
 		padding-top: 0;
 
 		// .intro__heading
