--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -188,17 +188,14 @@
 			h2,
 			h3,
 			h4 {
-				align-items: center;
-				display: flex;
-				flex-wrap: wrap;
-
 				img {
 					border: 2px solid var(--color-text);
 					border-radius: 50%;
 					height: 40px;
-					margin-left: 10px;
-					margin-right: 10px;
+					margin-left: 5px;
+					margin-right: 5px;
 					min-width: 40px;
+					vertical-align: middle;
 					width: 40px;
 				}
 			}
